@@ -1,3 +1,4 @@
+2/28/12 move LightRepresentation property to view
 2/28/12 fix rendering order so that behavior looks plausible when probe is close to light
 2/28/12 display correct value on AT detector based on its location
 2/28/12 update beam only when it's visible
